--- a/index.html
+++ b/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
   <title>Marmotball</title>
+
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      position: fixed;
+      background: #000;
+
+      overscroll-behavior-y: none;
+      touch-action: none;
+    }
+
     canvas { display: block; }
   </style>
 </head>
+
 <body>
+  <script type="module">
+    // Disable viewport scrolling entirely
+    document.addEventListener('touchmove', e => {
+      e.preventDefault();
+    }, { passive: false });
+  </script>
+
   <script type="module" src="./main.js"></script>
 </body>
 </html>
